fix header overlap issue

--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -23,7 +23,7 @@
     top: 0
     background-color: transparentize($delta, 0.08)
     width: 100%
-    z-index: 99
+    z-index: 101
     text-align: right
     box-shadow: 0 0 4px 0 transparentize($delta, 0.2)
 
